--- a/.gitignore
+++ b/.gitignore
@@ -182,4 +182,4 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
-
+src/skills/ProductListSkill/lambda/package/
